--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +66,72 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Inter, sans-serif;
+}
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  background-color: #21222a;
+  height: 90px;
+  width: 586px;
+  padding: 30px 25px;
+  margin: 0 auto;
+}
+
+.nav-logo_text {
+  margin-right: auto;
+  color: #61dafb;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.nav-title {
+  color: #deebf8;
+  font-weight: 600;
+}
+
+.nav-icon {
+  height: 30px;
+  margin-right: 7px;
+}
+/* Main */
+.main-sec {
+  margin: 0 auto;
+  width: 586px;
+  display: flex;
+  flex-direction: column;
+  padding: 57px 27px;
+  height: 459px;
+  background-color: #282d35;
+  color: #fff;
+  background-image: url("./reactjs-icon 2.png");
+  background-repeat: no-repeat;
+  background-position: right 50%;
+}
+
+.heading {
+  margin: 0;
+  font-size: 39px;
+  padding-bottom: 46px;
+  letter-spacing: -0.05em;
+}
+.lists {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 19.5px;
+  max-width: 400px;
+}
+.li-fact::marker {
+  font-size: 1.4rem;
+  color: #61dafb;
 }
